--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-image: url('assets/images/background.png');
+    background-image: url('assets/images/background.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
