--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
     background-repeat: no-repeat;
 }
 
-#container, #instructions, #options {
+#container, #instructions, #options, #quiz {
     background-color: rgb(98, 0, 0);
     position: relative;
     width: 100%;
@@ -69,17 +69,31 @@ label {
     margin: 10px;
 }
 
-/*select#option {
-    background-color:lightyellow;
-    text-align: center;
-    border-color: #ff8000;
-    color:rgb(98, 0, 0);
-    font-size: 1rem;
-    width:100px;
-    height:30px;
+#question {
+    color:#ff8000;
+    margin: 10px;
+}
+.ans-button {
+    background-color: whitesmoke;
+    color:black;
+    width: 90%;
+    height: auto;
+    padding: 10px;
+    margin: 5px;
+    text-align: left;
+}
+.nxt-button {
+    padding: 10px 20px;
+    margin: 15px;
+    font-size: 16px;
     font-weight: bold;
-    border-radius: 5px;
-    font-family:serif;
-    box-shadow: 5px 5px 10px rgba(88, 64, 64, 0.1);
+    background-color: #e3cbbf;
+    color: black;
+    border: none;
+    border-radius: 10px;
     cursor: pointer;
-}*/
+}
+.nxt-button:hover {
+    background-color: #ff8000;
+    color:whitesmoke;
+}
