--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
     padding: 20px;
     border-radius: 20px;
     margin: auto;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px 2px;
 }
 
 h1,
@@ -59,6 +59,7 @@ p {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    box-shadow: 0 0 10px 2px;
 }
 
 .button:hover {
