--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ label {
     text-align: left;
 }
 
-.nxt-button {
+#nxt-button {
     padding: 10px 20px;
     margin: 15px;
     font-size: 16px;
