--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,12 +90,13 @@ label {
     margin: 5px;
     text-align: left;
     cursor:pointer;
+    font-weight: 600;
 }
 
-/*.ans-button:hover {
+.ans-button:hover:not([disabled]) {
     background-color: #ff8000;
     color: whitesmoke;
-}*/
+}
 
 #nxt-button {
     padding: 10px 20px;
@@ -119,7 +120,7 @@ label {
     font-weight: 600;
     }
 .ans-button.incorrect {
-    background-color:#ff9393;
+    background-color:#F57575;
     color:whitesmoke;
     font-weight: 600;
 }
