image file path changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,12 @@
     box-sizing: border-box;
 }
 
-/**/
+/* styling of Main element */
 
 #bkimage {
     min-width: 100%;
     min-height: 100vh;
-    background-image: url('/assets/images/quizbackground.png');
+    background-image: url('../images/quizbackground.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
