--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
-    z-index: index 99;
+    z-index: 99;
     background-color: rgba(197, 197, 197, 0.7);
 
 }
@@ -43,7 +43,7 @@
 #result {
     background-color: rgb(98, 0, 0);
     position: relative;
-    width: 100%;
+    width: 90%;
     max-width: 420px;
     padding: 20px;
     border-radius: 20px;
